DTSCCI-1530 changes